src/main/java/com/example/DiplomaSite/error/DiplomaDefenseValidationException.java
package com.example.DiplomaSite.error;

public class DiplomaDefenseValidationException extends RuntimeException{
    public DiplomaDefenseValidationException(String message) {
        super(message);
    }
}
